Refactor code structure for improved readability and maintainability

--- a/plugins/freemoji/manifest.json
+++ b/plugins/freemoji/manifest.json
@@ -9,6 +9,10 @@
         {
             "name": "Rico040",
             "id": "619474349845643275"
+        },
+        {
+            "name": "pljs08",
+            "id": "676363120515481630"
         }
     ],
     "main": "src/index.ts",
